Fix comments in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -196,6 +196,9 @@ div.js-id-testimonial .card img.img-responsive {
    color: #9b6bcc;
 }
 
+.dark .staticman-comments.post-comments > .post-comment {
+  color: #212529;
+}
 
 /* End staticman comment section and form */
 
